hphp/test/slow/reified_generics/persistent-cls-1.php.expectf
Fatal error: Cannot create a new instance of a reified class without the reified generics in %s on line 7
